infrastructure/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: absp
  labels:
    app.kubernetes.io/name: absp
